# VeridianOS

./: .clippy.toml  .editorconfig  .gdb_history  .gitignore  AGENTS.md  AUTHORS  BOOTLOADER-UPGRADE-STATUS.md  CHANGELOG.md  CI-WORKFLOW-UPDATES.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEFERRED-IMPLEMENTATION-ITEMS.md  DOCUMENTATION-UPDATE-SUMMARY-2025-06-09.md  DOCUMENTATION-UPDATE-SUMMARY-20250610-EVENING.md  GEMINI.md  Justfile  LICENSE-APACHE  LICENSE-MIT  PHASE2-PHASE3-COMPLETION.md  PHASE2-STATUS-SUMMARY.md  PR-DESCRIPTION-COMPLETE.md  PR-DESCRIPTION-SHORT.md  PR-DESCRIPTION.md  PROJECT-STATUS.md  README.md  SECURITY.md  USER-SPACE-DEBUG-REPORT.md  book.toml  build-disk-image.py  build-kernel.sh  build-multiboot.sh  codecov.yml  create-grub-image.sh  memory-optimization-summary.md  rust-toolchain.toml  rustdoc.toml  rustfmt.toml  specs  (+3 more)
drivers/null/: Cargo.toml
drivers/null/src/: main.rs
kernel/: Cargo.toml  README.md  build.rs  run-custom-tests.sh  run-tests.sh
kernel/benches/: context_switch.rs  crypto_benchmarks.rs  ipc_benchmarks.rs  ipc_latency.rs  memory_allocation.rs
kernel/src/: PROCESS-SCHEDULER-STATE-ANALYSIS.md  bench.rs  bootstrap.rs  elf.rs  error.rs  integration_tests.rs  intrinsics.rs  lib.rs  log_service.rs  main.rs  phase2_validation.rs  print.rs  print_capture.rs  raii.rs  raii_examples.rs  raii_tests.rs  serial.rs  simple_alloc_unsafe.rs  stdlib.rs  test_config.rs  test_framework.rs  test_tasks.rs  thread_api.rs  userland.rs
kernel/src/arch/: barriers.rs  context.rs  entropy.rs  mod.rs  timer.rs
kernel/src/audio/: alsa.rs  buffer.rs  client.rs  codecs.rs  mixer.rs  mod.rs  pipeline.rs  usb_audio.rs  virtio_sound.rs  wav.rs
kernel/src/browser/: browser_main.rs  css_parser.rs  dom.rs  dom_bindings.rs  events.rs  flexbox.rs  forms.rs  html_tokenizer.rs  incremental.rs  integration.rs  js_compiler.rs  js_gc.rs  js_integration.rs  js_lexer.rs  js_parser.rs  js_vm.rs  layout.rs  mod.rs  paint.rs  style.rs  tab_isolation.rs  tabs.rs  tree_builder.rs  window.rs
kernel/src/cap/: inheritance.rs  ipc_integration.rs  manager.rs  memory_integration.rs  mod.rs  object.rs  revocation.rs  space.rs  tests.rs  token.rs  (+1 more)
kernel/tests/: README.md  basic_boot.rs  integration_tests.rs  ipc_basic.rs  ipc_benchmarks.rs  ipc_integration.rs  ipc_integration_tests.rs  memory_tests.rs  performance_benchmarks.rs  process_tests.rs  scheduler_tests.rs  security_tests.rs  should_panic.rs  test_example.rs
tools/bootimage-builder/: Cargo.toml
tools/mkfs-blockfs/: Cargo.toml
userland/: Cargo.toml  mod.rs  test_runner.rs
userland/akonadi/: akonadi-veridian.cpp  akonadi-veridian.h  build-akonadi.sh
userland/bluez/: bluez-hci-bridge.cpp  bluez-hci-bridge.h  bluez-pair.cpp  bluez-pair.h  bluez-veridian.cpp  bluez-veridian.h  build-bluez.sh
userland/coreutils/: cat.c  echo.c  ls.c  pipeline_test.c  sort.c  wc.c
userland/hello_world/: Cargo.toml
userland/init/: Cargo.toml  init.c
userland/integration/: KNOWN-LIMITATIONS.md  build-kde-rootfs.sh  build-xwayland.sh  ci-kde-build.yml  dbus-optimize.cpp  dbus-optimize.h  default-session.conf  kde-perf-profile.sh  kde-test-suite.sh  plasma-memory-opt.cpp  plasma-memory-opt.h  qemu-kde.sh  veridian-dm.cpp  veridian-dm.h  veridian-kde-init.sh  xwayland-dri3.cpp  xwayland-dri3.h  xwayland-glx.cpp  xwayland-glx.h  xwayland-im.cpp  xwayland-im.h  xwayland-veridian.cpp  xwayland-veridian.h
userland/kf6/: baloo-veridian-backend.cpp  baloo-veridian-backend.h  baloo-veridian-index.cpp  baloo-veridian-index.h  build-tier1.sh  build-tier2.sh  build-tier3.sh  kf6-master-build.sh  kio-veridian-worker.cpp  kio-veridian-worker.h  kwallet-veridian-backend.cpp  kwallet-veridian-backend.h  kwindowsystem-veridian.cpp  kwindowsystem-veridian.h  solid-veridian-backend.cpp  solid-veridian-backend.h
userland/kwin/: build-kwin.sh  kwin-veridian-effects.cpp  kwin-veridian-input.cpp  kwin-veridian-input.h  kwin-veridian-platform.cpp  kwin-veridian-platform.h  kwin-veridian-protocols.cpp  kwin-veridian-protocols.h  kwin-veridian-session.cpp  kwin-veridian-swrender.cpp  kwin-veridian-swrender.h  kwin-veridian-toolchain.cmake
userland/ld-veridian/: ld-veridian.c
userland/libc/: Makefile  meson-veridian-cross.ini
userland/libcurses/: curses.c  curses.h  ncurses.h
userland/libm/: Makefile
userland/libwayland/: Makefile  wayland-client.c  wayland-client.h
userland/networkmanager/: build-nm.sh  nm-dns.cpp  nm-dns.h  nm-ethernet.cpp  nm-ethernet.h  nm-veridian.cpp  nm-veridian.h  nm-wifi.cpp  nm-wifi.h
userland/pipewire/: build-pipewire.sh  pipewire-veridian.cpp  pipewire-veridian.h  pulseaudio-compat.cpp  pulseaudio-compat.h  pw-alsa-bridge.cpp  pw-alsa-bridge.h
userland/plasma/: activities-veridian.cpp  activities-veridian.h  breeze-veridian-decoration.cpp  breeze-veridian-decoration.h  breeze-veridian-style.cpp  breeze-veridian-style.h  build-plasma-apps.sh  install-breeze-assets.sh  krunner-veridian.cpp  krunner-veridian.h  kscreen-veridian-backend.cpp  kscreen-veridian-backend.h  plasma-audio-applet.cpp  plasma-audio-applet.h  plasma-bluetooth-applet.cpp  plasma-bluetooth-applet.h  plasma-nm-applet.cpp  plasma-nm-applet.h  plasma-veridian-lockscreen.cpp  plasma-veridian-lockscreen.h  plasma-veridian-session.sh  powerdevil-veridian-backend.cpp  powerdevil-veridian-backend.h  session-save-restore.cpp  session-save-restore.h
userland/qt6/: qt6-configure.sh  qt6-toolchain.cmake
userland/rust-std/: Cargo.toml  README.md  build.sh
userland/services/: Cargo.toml
userland/shell/: Cargo.toml
userland/test_programs/: driver_test.rs  filesystem_test.rs  hello_world.rs  mod.rs  network_test.rs  process_test.rs  shell_test.rs  stdlib_test.rs  thread_test.rs
userland/tests/: Makefile  busybox_test.sh  exec_test.c  exit_test.c  fork_test.c  getpid_test.c  hello.c  minimal.c  selfhost_complex.c  selfhost_stdio.c  selfhost_stdlib.c  selfhost_string.c  selfhost_test.c  write_test.c
userland/udev/: build-udev.sh  libudev-veridian.cpp  libudev-veridian.h  udev-veridian.cpp  udev-veridian.h
userland/vsh/: Cargo.toml
(+1556 files in other folders)
