[workspace]
resolver = "2"
members = [
    "kernel",
]
exclude = [
    "userland/rust-std",
    "tools/mkfs-blockfs",
]
# Note: tools/bootimage-builder is excluded from workspace
# It must be built separately as a host tool (not bare metal)
# Future members when they have Cargo.toml files:
# "drivers/*",
# "services/*",
# "libs/*",
# "userland/*",
# "tools/*",

[workspace.package]
version = "0.5.10"
authors = ["VeridianOS Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublegate/VeridianOS"
homepage = "https://github.com/doublegate/VeridianOS"

[workspace.dependencies]
# Core dependencies
spin = "0.9"
linked_list_allocator = "0.10"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.4"
log = { version = "0.4", default-features = false }

# Architecture-specific
x86_64 = "0.15"
cortex-a = "8.1"
riscv = "0.11"

# Testing and development
# Note: These are commented out for now as they're not compatible with no_std
# proptest = { version = "1.4" }
# criterion = { version = "0.5" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

# Profile settings for OS development
[profile.dev]
panic = "abort"
overflow-checks = true

[profile.release]
panic = "abort"
opt-level = 3  # Full optimization (default for production)
lto = "thin"
codegen-units = 1

