[package]
name = "veridian-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["alloc"]
alloc = []
testing = []
smp = []
test-kernel = ["qemu-exit"]
benchmarks = []
integration-tests = []
qemu-exit = []

[dependencies]
spin.workspace = true
linked_list_allocator.workspace = true
lazy_static.workspace = true
bitflags.workspace = true
log.workspace = true

# Architecture-specific dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64.workspace = true
bootloader = { version = "0.9", features = ["map_physical_memory"] }
bootloader_api = "0.11"  # Keep for API compatibility, use bootloader 0.9 for actual boot
uart_16550 = "0.3"
pic8259 = "0.10"
pc-keyboard = "0.7"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a.workspace = true

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv.workspace = true

[build-dependencies]
cc = "1.0"

[package.metadata.bootloader]
# Map physical memory to this virtual address  
# Use standard bootloader defaults for now

[lib]
name = "veridian_kernel"
path = "src/lib.rs"
test = true

[[bin]]
name = "veridian-kernel"
path = "src/main.rs"
test = false
bench = false

# Integration tests
[[test]]
name = "basic_boot"
harness = false

[[test]]
name = "ipc_integration_tests"
harness = false

[[test]]
name = "ipc_benchmarks"
harness = false

[[test]]
name = "scheduler_tests"
harness = false

[[test]]
name = "process_tests"
harness = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "test_example"
harness = false

# Benchmarks
[[bench]]
name = "ipc_latency"
harness = false

[[bench]]
name = "context_switch"
harness = false

[[bench]]
name = "memory_allocation"
harness = false