[workspace]
members = [
    "init",
    "shell",
    "libs/libveridian",
    "libs/libc",
    "programs/*",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["VeridianOS Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# No std for user-space programs
# User programs link against libveridian for system calls

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"