[package]
name = "vsh"
version = "0.1.0"
edition = "2021"
authors = ["VeridianOS Contributors"]
license = "MIT OR Apache-2.0"
description = "VeridianOS userland shell with Bash 5.3 feature parity"
repository = "https://github.com/doublegate/VeridianOS"

[[bin]]
name = "vsh"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
